# docs-angular

./: .gitlab-ci.yml  LICENSE  Taskfile.yml  blueprint-contributing.md  common.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  variables.json
.config/: package-lock.json
local/: package-lock.json
local/slim/: exe.txt  install.txt
readme/: subheader.md
